fix(user): switch to UUID and add user attributes
